# if-knowledge-repository

./: README.md
backend/: .env.example  Cargo.toml
backend/migrations/: 001_create_students.sql  002_create_auth_credentials.sql  003_create_categories.sql  004_create_resources.sql
backend/src/: errors.rs  main.rs  router.rs  state.rs
backend/src/handlers/: auth.rs  categories.rs  mod.rs  resources.rs  uploads.rs
backend/src/middleware/: auth.rs
backend/src/models/: category.rs  credential.rs  mod.rs  pagination.rs  resource.rs  student.rs
backend/src/repositories/: categories.rs  credentials.rs  mod.rs  resources.rs  storage.rs  students.rs
backend/src/services/: auth.rs  mod.rs  resources.rs  uploads.rs
frontend/: README.md  bun.lockb  package.json
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  globals.css  header.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(protected)/: error.tsx  layout.tsx  not-found.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/resources/: page.tsx
frontend/src/components/ui/: button-variants.ts  button.tsx  dialog.tsx
frontend/src/features/auth/: api.ts
frontend/src/features/auth/components/: GoogleButton.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/src/features/auth/hooks/: useLogin.ts  useRegister.ts
frontend/src/features/resources/: api.ts  types.ts
frontend/src/features/upload/: api.ts
frontend/src/features/upload/components/: UploadForm.tsx  (+1 more)
frontend/src/lib/: api-client.ts  auth.ts  types.ts
frontend/src/types/: next-auth.d.ts
(+10 files in other folders)
