[package]
name = "if-knowledge-repo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum            = { version = "0.8.8", features = ["macros"] }
tokio           = { version = "1.50.0", features = ["full"] }
tower           = "0.5.3"
tower-http      = { version = "0.6.8", features = ["cors", "trace"] }
serde           = { version = "1.0.228", features = ["derive"] }
serde_json      = "1.0.149"
sqlx            = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono", "tls-rustls-ring-webpki"] }
uuid            = { version = "1.22.0", features = ["v4", "serde"] }
chrono          = { version = "0.4.44", features = ["serde"] }
jsonwebtoken    = "9.3.0"
argon2          = "0.5.3"
aws-sdk-s3      = { version = "1.127.0", features = ["rustls"] }
aws-config      = { version = "1.8.15",  features = ["rustls"] }
anyhow          = "1.0.102"
thiserror       = "2.0.18"
tracing         = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenvy         = "0.15.7"
rustls          = { version = "0.23", features = ["ring"], default-features = false }
reqwest         = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tokio           = { version = "1.50.0", features = ["full", "test-util"] }
axum-test       = "19.1.1"
fake            = "5.1.0"
